--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,10 @@
 Package: TigeR
 Type: Package
-Title: Collection of more or less usefull functions
-Version: 0.0.2
-Author: Who wrote it
-Depends:
-    R (>= 3.3.2)
-IMPORTS: 
-    xts,
-    magrittr
-DEPENDS:
-	xts,
-	magrittr
+Title: What the Package Does (Title Case)
+Version: 0.0.3
+IMPORTS: xts, magrittr
+DEPENDS: xts, magrittr
+Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
