Added removeSlash Added unpack function
Signed-off-by: Frey Simon <Simon.Frey@verbund.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,11 +13,14 @@ export(mm2m3s)
 export(read.qobsqsim)
 export(read.xts)
 export(readCosero)
+export(removeSlash)
 export(setcolumns)
 export(smoothXTS)
 export(substrRight)
+export(unpack)
 export(wbl)
 export(write.xts)
 export(yearplot)
+import(R.utils)
 import(magrittr)
 import(xts)
