--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: TigeR
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.0.5
-IMPORTS: xts, magrittr
+Version: 0.0.6
+IMPORTS: xts, magrittr, R.utils
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: More about what it does (maybe more than one line)
