--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: TigeR
+Package: TigR
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.0.6
+Version: 0.1.0
 IMPORTS: xts, magrittr, R.utils
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
