some minor changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(clear.duplicated)
 export(colMax)
 export(dev.new.file)
 export(is.leapyear)
+export(libraries)
 export(m3s2mm)
 export(mm2m3s)
 export(read.qobsqsim)
