Added faster version of na.locf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(is.leapyear)
 export(libraries)
 export(m3s2mm)
 export(mm2m3s)
+export(nalocf)
 export(read.qobsqsim)
 export(read.xts)
 export(readCosero)
