Added readHZB also added the RStudio Project file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(nalocf)
 export(read.qobsqsim)
 export(read.xts)
 export(readCosero)
+export(readHZB)
 export(removeSlash)
 export(setcolumns)
 export(smoothXTS)
