--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TigR
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.4
+Title: A collection of more or less usefull R functions
+Version: 0.1.5
 IMPORTS: xts, magrittr, R.utils
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
