--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(readHZB)
 export(removeSlash)
 export(setcolumns)
 export(smoothXTS)
+export(smoothdaily)
 export(substrRight)
 export(unpack)
 export(wbl)
