--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ S3method(plot,xxts)
 export(abc)
 export(addSlash)
 export(apply.hourly)
+export(changeSlash)
 export(clear.duplicated)
 export(colMax)
 export(dev.new.file)
+export(embed.fullextent)
 export(is.leapyear)
 export(libraries)
 export(m3s2mm)
@@ -17,6 +19,7 @@ export(read.xts)
 export(readCosero)
 export(readHZB)
 export(removeSlash)
+export(runcosero)
 export(setcolumns)
 export(smoothXTS)
 export(smoothdaily)
