Resolved bug in watch.folder

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(smoothXTS)
 export(smoothdaily)
 export(substrRight)
 export(unpack)
+export(watch.files)
 export(wbl)
 export(write.xts)
 export(yearplot)
