--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(libraries)
 export(m3s2mm)
 export(mm2m3s)
 export(nalocf)
+export(peakdiff)
 export(read.qobsqsim)
 export(read.xts)
 export(readCosero)
@@ -30,6 +31,7 @@ export(wbl)
 export(write.xts)
 export(yearplot)
 import(R.utils)
+import(hydroGOF)
 import(magrittr)
 import(parallel)
 import(pbapply)
