bug in peakdiff solved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(clear.duplicated)
 export(colMax)
 export(dev.new.file)
 export(embed.fullextent)
+export(find_peaks)
 export(is.leapyear)
 export(libraries)
 export(m3s2mm)
