Added functions to read and write a COSERO parameter file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(read.qobsqsim)
 export(read.xts)
 export(readCosero)
 export(readHZB)
+export(read_COSERO_par)
+export(readogr)
 export(removeSlash)
 export(runcosero)
 export(setcolumns)
@@ -30,10 +32,13 @@ export(unpack)
 export(watch.files)
 export(wbl)
 export(write.xts)
+export(write_COSERO_par)
 export(yearplot)
 import(R.utils)
 import(hydroGOF)
 import(magrittr)
 import(parallel)
 import(pbapply)
+import(rgdal)
+import(tools)
 import(xts)
