Added function to scale/normalize vectors, matrices and data.frames

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(read_COSERO_par)
 export(readogr)
 export(removeSlash)
 export(runcosero)
+export(scalevalues)
 export(setcolumns)
 export(smoothXTS)
 export(smoothdaily)
