--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(apply.hourly)
 export(changeSlash)
 export(clear.duplicated)
 export(colMax)
+export(colMin)
 export(dev.new.file)
 export(embed.fullextent)
 export(find_peaks)
