read.xts now uses fread from data.table --> accelerates reading files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(write.xts)
 export(write_COSERO_par)
 export(yearplot)
 import(R.utils)
+import(data.table)
 import(hydroGOF)
 import(magrittr)
 import(parallel)
