--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: TigR
 Type: Package
 Title: A collection of more or less usefull R functions
-Version: 0.1.8.7
-IMPORTS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools
+Version: 0.1.8.8
+IMPORTS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: More about what it does (maybe more than one line)
