Added get.dimensions for retrieving dimesnions of a COSERO parameter file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(colMin)
 export(dev.new.file)
 export(embed.fullextent)
 export(find_peaks)
+export(get.dimensions)
 export(is.leapyear)
 export(libraries)
 export(m3s2mm)
