--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ export(dev.new.file)
 export(embed.fullextent)
 export(find_peaks)
 export(get.dimensions)
+export(get.parameter)
 export(is.leapyear)
 export(libraries)
 export(m3s2mm)
+export(missing.steps)
 export(mm2m3s)
 export(nalocf)
 export(peakdiff)
