Added missing steps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(colMax)
 export(colMin)
 export(dev.new.file)
 export(embed.fullextent)
+export(fill.missing)
 export(find_peaks)
 export(get.dimensions)
 export(get.parameter)
