--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(find_peaks)
 export(get.dimensions)
 export(get.parameter)
 export(is.leapyear)
+export(is.unique)
 export(libraries)
 export(m3s2mm)
 export(missing.steps)
@@ -47,6 +48,7 @@ import(hydroGOF)
 import(magrittr)
 import(parallel)
 import(pbapply)
+import(plyr)
 import(rgdal)
 import(tools)
 import(xts)
