Added modified version of is.unique Solved some bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(substrRight)
 export(unpack)
 export(watch.files)
 export(wbl)
+export(which.is.unique)
 export(write.xts)
 export(write_COSERO_par)
 export(yearplot)
