Added writeogr, a simple wrapper to write ESRI shapefiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(wbl)
 export(which.is.unique)
 export(write.xts)
 export(write_COSERO_par)
+export(writeogr)
 export(yearplot)
 import(R.utils)
 import(data.table)
