--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: TigR
 Type: Package
 Title: A collection of more or less usefull R functions
-Version: 0.1.9.8
-IMPORTS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr
-DEPENDS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr
+Version: 0.1.9.9
+IMPORTS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr, table
+DEPENDS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr, table
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: More about what it does (maybe more than one line)
@@ -11,4 +11,4 @@ Description: More about what it does (maybe more than one line)
 License: GPLv3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
