dy.cosero for plotting cosero output using dygraph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(head,list)
 S3method(update,parameters)
 export(abc)
 export(addSlash)
+export(analyse.snow.state)
 export(apply.daily.columns)
 export(apply.hourly)
 export(changeSlash)
@@ -11,6 +12,7 @@ export(clear.duplicated)
 export(colMax)
 export(colMin)
 export(dev.new.file)
+export(dy.cosero)
 export(embed.fullextent)
 export(fill.missing)
 export(find_peaks)
@@ -25,12 +27,14 @@ export(mm2m3s)
 export(nalocf)
 export(peakdiff)
 export(read.qobsqsim)
+export(read.state)
 export(read.xts)
 export(readCosero)
 export(readHZB)
 export(read_COSERO_par)
 export(readogr)
 export(removeSlash)
+export(rm.dls)
 export(runcosero)
 export(scalevalues)
 export(setcolumns)
@@ -48,6 +52,8 @@ export(yearplot)
 export(zip_statefiles)
 import(R.utils)
 import(data.table)
+import(dygraphs)
+import(htmltools)
 import(hydroGOF)
 import(magrittr)
 import(parallel)
