Added write_COSERO_table and solved a bug in get.dimension

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(wbl)
 export(which.is.unique)
 export(write.xts)
 export(write_COSERO_par)
+export(write_COSERO_table)
 export(writeogr)
 export(yearplot)
 export(zip_statefiles)
