Added a function to remove influence of a turbine form observed flow data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(read_COSERO_par)
 export(readogr)
 export(removeSlash)
 export(rm.dls)
+export(rm_turbine)
 export(runcosero)
 export(scalevalues)
 export(setcolumns)
