--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(missing.steps)
 export(mm2m3s)
 export(nalocf)
 export(peakdiff)
+export(purge.dir)
 export(read.qobsqsim)
 export(read.state)
 export(read.xts)
