some minor bugs and typos cleared

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(mm2m3s)
 export(nalocf)
 export(peakdiff)
 export(purge.dir)
+export(read.fews)
 export(read.qobsqsim)
 export(read.state)
 export(read.xts)
