Solved a bug in write_COSERO_table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,9 @@ export(readogr)
 export(removeSlash)
 export(rm.dls)
 export(rm_turbine)
+export(rowMax)
+export(rowMedian)
+export(rowMin)
 export(runcosero)
 export(scalevalues)
 export(setcolumns)
