--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,10 @@ export(changeSlash)
 export(clear.duplicated)
 export(colMax)
 export(colMin)
+export(colStats)
 export(dev.new.file)
 export(dy.cosero)
+export(edit_par)
 export(embed.fullextent)
 export(fill.missing)
 export(find_peaks)
@@ -41,11 +43,15 @@ export(rm_turbine)
 export(rowMax)
 export(rowMedian)
 export(rowMin)
+export(rowStats)
 export(runcosero)
 export(scalevalues)
+export(set_year)
 export(setcolumns)
 export(smoothXTS)
 export(smoothdaily)
+export(split_monthly)
+export(splityears)
 export(substrRight)
 export(unpack)
 export(watch.files)
@@ -54,6 +60,7 @@ export(which.is.unique)
 export(write.xts)
 export(write_COSERO_par)
 export(write_COSERO_table)
+export(write_COSEROreg_par)
 export(writeogr)
 export(yearplot)
 export(zip_statefiles)
