--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,12 @@
 Package: TigR
 Type: Package
 Title: A collection of more or less usefull R functions
-Version: 0.2.1.8
+Version: 0.3.0.7
 IMPORTS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr, raster, dygraphs, htmltools
-DEPENDS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr, raster, dygraphs, htmltools
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: No description available.
 License: GPLv3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.3
