replaced dependencies of rgdal and sp with terra

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(head,list)
 S3method(update,parameters)
 export(abc)
 export(addSlash)
+export(adist_dels)
 export(analyse.snow.state)
 export(apply.daily.columns)
 export(apply.hourly)
@@ -50,6 +51,7 @@ export(set_year)
 export(setcolumns)
 export(smoothXTS)
 export(smoothdaily)
+export(split__NZNM_monthly)
 export(split_monthly)
 export(splityears)
 export(substrRight)
@@ -73,6 +75,6 @@ import(magrittr)
 import(parallel)
 import(pbapply)
 import(plyr)
-import(rgdal)
+import(terra)
 import(tools)
 import(xts)
