--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: TigR
 Type: Package
 Title: A collection of more or less usefull R functions
-Version: 0.3.0.7
-IMPORTS: xts, magrittr, R.utils, parallel, pbapply, rgdal, tools, data.table, hydroGOF, sp, plyr, raster, dygraphs, htmltools
+Version: 0.4.0.0
+IMPORTS: xts, magrittr, R.utils, parallel, pbapply, terra, tools, data.table, hydroGOF, sf, plyr, raster, dygraphs, htmltools
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: No description available.
