Added parallel support for rowStats and colStats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(splityears)
 export(substrRight)
 export(unpack)
 export(update.parameters)
+export(valindex)
 export(watch.files)
 export(wbl)
 export(which.is.unique)
