--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TigR
 Type: Package
 Title: A collection of more or less usefull R functions
-Version: 0.4.0.7
+Version: 0.4.0.8
 IMPORTS: 
     xts,
     magrittr,
@@ -14,8 +14,9 @@ IMPORTS:
     sf,
     plyr,
     dygraphs,
-    htmltools
-    DescTools
+    htmltools,
+    DescTools,
+    future.apply
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: No description available.
