Bugfix in rowcolstats.r
Return NA if only NA is passed to function instead of throwing an error.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(zip_statefiles)
 import(R.utils)
 import(data.table)
 import(dygraphs)
+import(future.apply)
 import(htmltools)
 import(magrittr)
 import(parallel)
