--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TigR
 Type: Package
 Title: A collection of more or less usefull R functions
-Version: 0.4.0.9
+Version: 0.4.0.11
 IMPORTS: 
     xts,
     magrittr,
@@ -17,10 +17,11 @@ IMPORTS:
     htmltools,
     DescTools,
     future.apply
+    hydroGOF
 Author: Simon Frey
 Maintainer: Simon Frey <simon.frey@verbund.com>
 Description: No description available.
 License: GPLv3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
